# spotify-playlist-snapshot

./: .gitignore  configuration.yaml.example  pyproject.toml
src/spotify_playlist_snapshot/: __main__.py  snapshot.py
tst/: test_snapshot.py
